# flet-counter

./: README.md  build.bat  pyproject.toml
.github/workflows/: apk.yml  win.yml
src/: json_tool.py  main.py
