[project]
name = "counter"
version = "0.4.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "flet==0.25.1"
]


[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "top.debug967"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Counter"

# company name to display in about app dialogs
company = "Counter"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2024 by Debug967"

[tool.flet.app]
path = "src"

[tool.flet.android]
split_per_abi = true